:heavy_plus_sign: config bd

--- a/bookstore/src/main/resources/application.yml
+++ b/bookstore/src/main/resources/application.yml
@@ -7,3 +7,4 @@ spring:
         format_sql: true
         ddl-auto: update
         dialect: org.hibernate.dialect.PostgreSQLDialect
+    generate-ddl: true
