--- a/bookstore/compose.yaml
+++ b/bookstore/compose.yaml
@@ -1,9 +1,12 @@
+version: '3.1'
+
 services:
-  postgres:
-    image: 'postgres:latest'
-    environment:
-      - 'POSTGRES_DB=bookstore'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+  db:
+    image: postgres:15
+    restart: always
     ports:
-      - '54401:5432'
+      - "54401:5432"
+    environment:
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: bookstore
